# batch-video-concat-tool

./: .gitignore  AGENTS.md  BatchVideoConcatTool.spec  README.md  build_windows.ps1  codex_batch_concat_project.md  pyproject.toml  发布说明.txt  用户使用说明.txt
src/batch_concat/: __init__.py  main.py
src/batch_concat/core/: config_store.py  models.py  permutation_engine.py  validation.py
src/batch_concat/resolve/: __init__.py  script_exporter.py
src/batch_concat/services/: app_service.py
src/batch_concat/ui/: main_window.py
tests/: test_app_service.py  test_config_store.py  test_main_window.py  test_permutation_engine.py  test_script_exporter.py  test_validation.py
