[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-video-concat-tool"
version = "0.1.0"
description = "Windows desktop app for deterministic batch video combination export via DaVinci Resolve Lua scripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
pack = [
    "pyinstaller>=6.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
